--- a/about.html
+++ b/about.html
@@ -86,16 +86,7 @@
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
-    <section id="about">
-      <div class="container" data-aos="fade-up">
-        <div class="row">
-
-
-
-
-
-          <!-- ======= TODO: About Section ======= -->
+    <!-- ======= TODO: About Section ======= -->
     <section id="about" style="padding-top: 30px;">
       <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
         <div class="row">
@@ -107,10 +98,7 @@
               <p>Свою охранную деятельность хозяйственное общество «Зехинли доганлар» осуществляет по единому ГКВЭД (Государственный классификатор видов экономической деятельности), введенному 01.01.2014 года, раздел 80, группа 80.1, класс 80.10, который включает в себя деятельность охранников, сторожей, вахтеров, караульных служб и группа 80.2, класс 80.20, включающий в себя обеспечение функционирования систем безопасности.</p>
               <p>Хозяйственное общество «Зехинли доганлар» имеет все необходимые нормативные документы и ресурсы для выполнения охранных услуг, в том числе транспорт и СИЗ для охранников. Компания предоставляет квалифицированных охранников с опытом работы, которые работают круглосуточно в течение 7 (семи) дней в неделю. Охранные услуги осуществляются 24 часа в сутки.</p>
               <p> Также предприятие освобождает Заказчика от всяких видов рисков, касающихся здоровья работников охраны, травматизма на рабочем месте и др. так как работники застрахованы против возможных рисков травматизма на рабочем месте.</p>
-              <div class="row">
-                <p class="col-11">С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
-                <div class="col-1 hyundai"><a target="_blank" href="images/Recomment letter from HEC.jpg"><img style="width:100%" src="images/Recomment letter from HEC.jpg" alt="Minnetdarlyk haty"></a></div>
-              </div>
+              <p>С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
               <p>Хозяйственное общество «Зехинли доганлар» активно участвует в тендерах, проводимых иностранными компаниями таких как CNPC International (T-n), ENI (T-n), Petronas Çarigali (T-n), работающих на основании договора  по распределению продукции и Закона Туркменистана «Об углеводородных ресурсах», а так же южнокорейской компании «Hyundai Engineering Co. Ltd».</p>
               <p>Цель компании соответствует его девизу «Целостность и сохранность», так как основной задачей является принятие оперативных мер по предотвращению несанкционированных проникновений, а так же обеспечения целостности и сохранности имущества охраняемого объекта.</p>
               <p>Обратитесь к нам и Вы сохраните свое имущество в целостности и сохранности!</p>
@@ -161,7 +149,7 @@
   
   
   <!-- TODO: WORK PROCESS FLOW CHART SECTION -->
-
+<!-- 
       <section id="work-chart" data-aos="fade-right"> 
         <div class="grid-5x1">
           <div class="guty">
@@ -199,7 +187,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
   <!-- WORK PROCESS FLOW CHART SECTION -->
 
               <!-- ======= TODO: Diversifikasiya ======= -->
