--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,6 @@
 </head>
 
 <body>
-
     
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center">
@@ -84,32 +83,28 @@
     </div>
   </header><!-- End Header -->
     <main>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="d-flex flex-column">
-                        <div class="row">
-                            <div class="col-sm-6 order-sm-2 h-min-300px bg-size-cover h-min-300px" style="background-image:url(images/gallery/01.jpg);"></div>
-                            <div class="col-sm-6 order-sm-2 h-min-300px bg-size-cover h-min-300px" style="background-image:url(images/gallery/01.jpg);"></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-6 cover-background h-min-300px bg-size-cover" style="background-image:url(images/gallery/01.jpg);"></div>
-                            <div class="col-sm-6 cover-background h-min-300px bg-size-cover" style="background-image:url(images/gallery/01.jpg);"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 p-0">
-                    <section class="parallax section section-background h-600px bg-size-cover m-0" style="background-image:url(images/gallery/01.jpg);">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col">
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-            </div>
+
+      <div class="container-fluid">
+        <div class="gallery">
+          <div class="setir" data-aos="fade-up">
+            <img src="images/gallery/5.webp" alt="">
+            <img src="images/gallery/6.webp" alt="">
+            <img src="images/gallery/2.webp" alt="">
+          </div>
+          <div class="setir" data-aos="fade-down">
+            <img src="images/gallery/3.webp" alt="">
+            <img src="images/gallery/4.webp" alt="">
+          </div>
+          <div class="setir" data-aos="fade-up">
+            <img src="images/gallery/1.webp" alt="">
+            <img src="images/gallery/7.webp" alt="">
+          </div>
         </div>
+        <div class="gallery" data-aos="fade-left">
+          <img src="images/gallery/12.webp" alt="">
+        </div>
+      </div>
+
 
     </main>
 
