--- a/about.html
+++ b/about.html
@@ -218,11 +218,11 @@
                           </div>
                           <!-- <P id="abzas">Так же до сегодняшнего дня была оказана материальная помощь</P> -->
                             <div class="row mb-3 mt-5">
-                              <div class="img-fluid col-lg-2 sonra"><a target="_blank" href="images/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <div class="img-fluid col-lg-2"><a target="_blank" href="images/minnetdarlyk/asgabat.jpg"><img class="ramka" style="width:100%" src="images/minnetdarlyk/asgabat.jpg" alt="Minnetdarlyk haty"></a></div>
                               <p class="col-lg-10 text-end">Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат для обеспечения восстановительного лечения.</p>
                             </div>
                             <div class="row mb-3 mt-5">
-                              <div class="img-fluid col-lg-2 sonra"><a target="_blank" href="images/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <div class="img-fluid col-lg-2""><a target="_blank" href="images/minnetdarlyk/olimpiad.jpg"><img class="ramka" src="images/minnetdarlyk/olimpiad.jpg" alt="Minnetdarlyk haty"></a></div>
                               <p class="col-lg-10 text-end">Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ) в приобретении спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участия люди с синдромом Дауна и инвалиды по интеллекту.</p>
                             </div>
                             <div class="row mb-3 mt-5">
