--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <section id="hero" class="curved">
 
     <div class="hero-content slogan" data-aos="fade-up">
-      <h2 class="lang" key="bitewilik1">Наш девиз: <br> <span>«целостность & сохранность»</span></h2> 
+      <h2 class="lang background" key="bitewilik1">Наш девиз: <br> <span>«целостность & сохранность»</span></h2> 
       <!-- <img src="images/logotype.png" alt=""> -->
     </div>
 
@@ -111,7 +111,7 @@
         <div class="row">
 
           <div class="col-lg-5 about-img sunshine">
-            <!-- <img src="images/logo with sunshine.jpg" alt=""> -->
+            <img src="images/logo with sunshine.jpg" alt="">
             <!-- <div class="sunshine"></div> -->
           </div>
           <div class="col-lg-7 content">
@@ -160,7 +160,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/logotype.png" alt=""></div>
+                <div class="kart__surat"><img src="images/gallery/10.webp" alt=""></div>
                 <h2 class="lang" key="kartocka_fron_h2_1">Невооруженная дневная и ночная охрана</h2>
               </div>
               <div class="flip-box-back">
