--- a/about.html
+++ b/about.html
@@ -222,16 +222,16 @@
                               <p class="col-lg-10 text-end">Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат для обеспечения восстановительного лечения.</p>
                             </div>
                             <div class="row mb-3 mt-5">
-                              <div class="img-fluid col-lg-2""><a target="_blank" href="images/minnetdarlyk/olimpiad.jpg"><img class="ramka" src="images/minnetdarlyk/olimpiad.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <div class="img-fluid col-lg-2"><a target="_blank" href="images/minnetdarlyk/olimpiad.jpg"><img class="ramka" src="images/minnetdarlyk/olimpiad.jpg" alt="Minnetdarlyk haty"></a></div>
                               <p class="col-lg-10 text-end">Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ) в приобретении спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участия люди с синдромом Дауна и инвалиды по интеллекту.</p>
                             </div>
                             <div class="row mb-3 mt-5">
-                              <div class="img-fluid col-lg-2"><a target="_blank" href="images/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <div class="img-fluid col-lg-2"><a target="_blank" href="images/minnetdarlyk/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
                               <p class="col-lg-10 text-end">Обществу глухонемых в г. Балканабат для улучшения условий содержания детей инвалидов.</p>
                             </div>
                             <div class="row mb-3 mt-5">
-                              <div class="col-lg-2"><a target="_blank" href="images/telekeçi godanow.jpg"><img style="width:100%" src="images/telekeçi godanow.jpg" alt="Minnetdarlyk haty"></a></div>
-                              <p class="col-lg-10 text-end">Предпринимателю Х. Годанову по созданию историко-краеведческого музея в г. Етрек Етрекского этрапа Балканского велаята.</p>
+                              <div class="col-lg-2"><a target="_blank" href="images/minnetdarlyk/Etrek muzeyi.jpg"><img style="width:100%" src="images/minnetdarlyk/Etrek muzeyi.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <p class="col-lg-10 text-end">Предпринимателю Х. Годанову по созданию историко-краеведческого музея в г. Этрек Этрекского этрапа Балканского велаята.</p>
                             </div>
                           <p>Хозяйственное общество «Зехинли доганлар» планирует продолжить благотворительную деятельность, так как лучший способ сохранить память о добрых делах-повторять их.</p>
                           
