--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
     <div class="hero-slider swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/1.jpg');"></div>
-        <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/2-2.webp');"></div>
-        <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/3.jpg');"></div>
-        <!-- <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/4.jpg');"></div> -->
-        <!-- <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/5.jpg');"></div> -->
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/1.webp');"></div>
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/2-2.webp');"></div>
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/3.webp');"></div>
+        <!-- <div class="swiper-slide" style="background-image: url('');"></div> -->
+        <!-- <div class="swiper-slide" style="background-image: url('');"></div> -->
       </div>
     </div>
       </section><!-- End Hero Section -->
