--- a/gallery.html
+++ b/gallery.html
@@ -89,15 +89,19 @@
           <div class="setir" data-aos="fade-up">
             <img src="images/gallery/5.webp" alt="">
             <img src="images/gallery/6.webp" alt="">
-            <img src="images/gallery/2.webp" alt="">
-          </div>
-          <div class="setir" data-aos="fade-down">
-            <img src="images/gallery/3.webp" alt="">
-            <img src="images/gallery/4.webp" alt="">
+            <img src="images/gallery/pickup.webp" alt="">
+            <!-- <img src="images/gallery/2.webp" alt=""> -->
           </div>
           <div class="setir" data-aos="fade-up">
             <img src="images/gallery/1.webp" alt="">
+            <img src="images/gallery/8.webp" alt="">
+            <img src="images/gallery/4.1.webp" alt="">
+            
+          </div>
+          <div class="setir" data-aos="fade-down">
+            <img src="images/gallery/3.webp" alt="">
             <img src="images/gallery/7.webp" alt="">
+            
           </div>
         </div>
         <div class="gallery" data-aos="fade-left">
