--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <section id="hero" class="curved">
 
     <div class="hero-content slogan" data-aos="fade-up">
-      <h2 class="lang background" key="bitewilik1">Наш девиз: <br> <span>«целостность & сохранность»</span></h2> 
+      <h2 class="lang" key="bitewilik1">Наш девиз: <br> <span>«целостность & сохранность»</span></h2> 
       <!-- <img src="images/logotype.png" alt=""> -->
     </div>
 
