--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
 
           <div class="col-lg-5 about-img">
-            <img src="images/logo effects/wintery-sunburst2.png" class="back-img" alt="shohle">
+            <img src="images/logo effects/blue.jpg" class="back-img" alt="shohle">
             <img src="images/logo/about-img-500px.png" class="main-img" alt="logotibimiz">
             <!-- <div class="sunshine"></div> -->
           </div>
@@ -176,7 +176,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/gallery/10.webp" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
                 <h2 class="lang" key="kartocka_fron_h2_1">Невооруженная дневная и ночная охрана</h2>
               </div>
               <div class="flip-box-back">
@@ -188,7 +188,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/logotype.png" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
                 <h2 class="lang" key="kartocka_fron_h2_2">Охрана вахтовым методом</h2>
               </div>
               <div class="flip-box-back">
@@ -200,7 +200,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/logotype.png" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
                 <h2 class="lang" key="kartocka_fron_h2_3">Обеспечение внутри объектного и пропускного режима</h2>
               </div>
               <div class="flip-box-back">
@@ -212,7 +212,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/logotype.png" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
                 <h2 class="lang" key="kartocka_fron_h2_4">Сопровождение грузов, машина сопровождения</h2>
               </div>
               <div class="flip-box-back">
@@ -224,7 +224,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/logotype.png" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
                 <h2 class="lang" key="kartocka_fron_h2_5">Монтаж систем объектовой охраны</h2>
               </div>
               <div class="flip-box-back">
@@ -236,7 +236,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/logotype.png" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
                 <h2 class="lang" key="kartocka_fron_h2_6">Обслуживание системы объектовой охраны</h2>
               </div>
               <div class="flip-box-back">
@@ -292,18 +292,42 @@
         </section>
         <!-- END OF WORK LIST SECTION -->
 
+<!-- ======= Call To Action Section 1 ======= -->
+<section id="call-to-action" class="bashky bashky2">
+  <!-- <img src="assets/img/hero-carousel/1.jpg" alt=""> -->
+    <div class="container" data-aos="zoom-out">
+      <div class="text-center">
+      <div >
+          <!-- <h3 class="cta-text lang" key="section1h3">Обращаясь к ЧОП «Зехинли доганлар» </h3> -->
+          <h2 class="cta-title lang" key="section1p">«Зехинли доганлар» - надежный представитель в сфере охранных услуг</h2>
+        </div>
+      </div>
+    </div>
+    <svg class="hero-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28 " preserveAspectRatio="none">
+      <defs>
+        <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z">
+      </defs>
+      <g class="wave1">
+        <use xlink:href="#wave-path" x="50" y="3" fill="rgba(255,255,255, .1)">
+      </g>
+      <g class="wave2">
+        <use xlink:href="#wave-path" x="50" y="0" fill="rgba(255,255,255, .2)">
+      </g>
+      <g class="wave3">
+        <use xlink:href="#wave-path" x="50" y="9" fill="var(--color-logo)">
+      </g>
+    </svg>
 
-        <section id="call-to-action" class="sonky">
-          <!-- <img src="assets/img/hero-carousel/1.jpg" alt=""> -->
-            <div class="container hatlar" data-aos="zoom-out">
-              <div class="text-center">
-              <div >
-                  <h3 class="cta-text lang" key="section1h3">Barlamak ucin goyuldy</h3>
-                  <h2 class="cta-title lang" key="section1p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, iusto.</h2>
-                </div>
-              </div>
-            </div>
-        </section><!-- End Call To Action Section -->
+</section><!-- End Call To Action Section -->
+
+
+
+
+
+
+
+
+
 
           <!-- TODO: WORK PROCESS FLOW CHART SECTION -->
 
@@ -361,15 +385,24 @@
 
         <div class="row contact-info">
 
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="contact-address">
               <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
-              <h3 class="lang" key="adres1">Адрес</h3>
+              <h3 class="lang" key="adres1">юридический Адрес</h3>
+              <address class="lang" key="adres2">Gumdag şäheriniň 15-nji ýaşaýyş jaýlar toplumynyň 88-njy jaýy
+</address>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="contact-address">
+              <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
+              <h3 class="lang" key="adres1">фактический адрес</h3>
               <address class="lang" key="adres2">Türkmenbaşy şäheri, Şagadam söwda merkezi</address>
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="contact-phone">
               <i class="bi bi-phone" style="color: black; opacity: 0.8;"></i>
               <h3 class="lang" key="phone_number">Номер телефона</h3>
@@ -377,7 +410,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="contact-email">
               <i class="bi bi-envelope" style="color:black; opacity: 0.8;"></i>
               <h3 class="lang" key="email">Email</h3>
