--- a/index.html
+++ b/index.html
@@ -389,8 +389,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
               <h3 class="lang" key="adres1">юридический Адрес</h3>
-              <address class="lang" key="adres2">Gumdag şäheriniň 15-nji ýaşaýyş jaýlar toplumynyň 88-njy jaýy
-</address>
+              <address class="lang" key="adres2">Gumdag şäheriniň 15-nji ýaşaýyş jaýlar toplumynyň 88-njy jaýy</address>
             </div>
           </div>
 
