--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
 
           <div class="col-lg-5 about-img">
-            <img src="images/logo effects/blue.jpg" class="back-img" alt="shohle">
+            <img src="images/logo effects/солнце.png" class="back-img" alt="shohle">
             <img src="images/logo/about-img-500px.png" class="main-img" alt="logotibimiz">
             <!-- <div class="sunshine"></div> -->
           </div>
