--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
               <p>С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
               <p>Хозяйственное общество «Зехинли доганлар» активно участвует в тендерах, проводимых иностранными компаниями таких как CNPC International (T-n), ENI (T-n), Petronas Çarigali (T-n), работающих на основании договора  по распределению продукции и Закона Туркменистана «Об углеводородных ресурсах», а так же южнокорейской компании «Hyundai Engineering Co. Ltd».</p>
               <p>Цель компании соответствует его девизу «Целостность и сохранность», так как основной задачей является принятие оперативных мер по предотвращению несанкционированных проникновений, а так же обеспечения целостности и сохранности имущества охраняемого объекта.</p>
-              <p>Обратитесь к нам и Вы сохраните свое имущество в целостности и сохранности!</p>
+              <p style="font-size: 24px; font-weight:bolder ;">Обратитесь к нам и Вы сохраните свое имущество в целостности и сохранности!</p>
           </div>
         </div>
       </div>
@@ -205,6 +205,32 @@
                 </div>
               </section><!-- End Diversifikasiya -->
 
+              <!-- TODO: CLIENTS -->
+    <!-- ======= Clients Section ======= -->
+    <section id="clients">
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>НАШИ ЗАРУБЕЖНЫЕ ТОРГОВЫЕ ПРЕДСТАВИТЕЛИ</h2>
+          <!-- <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p> -->
+        </div>
+
+        <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section><!-- End Clients Section -->
+
               <!-- ======= TODO: БЛАГОТВОРИТЕЛЬНОСТЬ ======= -->
               <section id="about" style="padding-top: 50px;">
                 <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
@@ -214,24 +240,25 @@
                         <h3 class="lang header text-center" key="about2" style="font:28px; font-weight: bold;">«Добрые дела дают силы нам самим и побуждают к добрым поступкам других»</h3>
                           <div class="row mb-3 mt-5">
                             <img class="img-fluid col-lg-3" src="images/ToreAhunMetjidi.jpg" alt="Töre Ahun Metjidi">
-                            <P class="col-lg-9 text-end">Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
+                            <P class="col-9 text-end">Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
                           </div>
                           <!-- <P id="abzas">Так же до сегодняшнего дня была оказана материальная помощь</P> -->
                             <div class="row mb-3 mt-5">
-                              <div class="img-fluid col-lg-2"><a target="_blank" href="images/minnetdarlyk/asgabat.jpg"><img class="ramka" style="width:100%" src="images/minnetdarlyk/asgabat.jpg" alt="Minnetdarlyk haty"></a></div>
-                              <p class="col-lg-10 text-end">Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат для обеспечения восстановительного лечения.</p>
+                              <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/asgabat.jpg"><img class="ramka" style="width:100%" src="images/minnetdarlyk/asgabat.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <p class="col-10 text-end">Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат для обеспечения восстановительного лечения.</p>
                             </div>
                             <div class="row mb-3 mt-5">
-                              <div class="img-fluid col-lg-2"><a target="_blank" href="images/minnetdarlyk/olimpiad.jpg"><img class="ramka" src="images/minnetdarlyk/olimpiad.jpg" alt="Minnetdarlyk haty"></a></div>
-                              <p class="col-lg-10 text-end">Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ) в приобретении спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участия люди с синдромом Дауна и инвалиды по интеллекту.</p>
+                              <div class="img-fluid col-2"><img class="ramka olimp" src="images/minnetdarlyk/olympiada_flyer.jpg" alt="FLYER"></div>
+                              <div class="img-fluid col-2 olimp"><a target="_blank" href="images/minnetdarlyk/olimpiad.jpg"><img class="ramka olimp" src="images/minnetdarlyk/olimpiad.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <p class="col-8 text-end">Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ) в приобретении спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участия люди с синдромом Дауна и инвалиды по интеллекту.</p>
                             </div>
                             <div class="row mb-3 mt-5">
-                              <div class="img-fluid col-lg-2"><a target="_blank" href="images/minnetdarlyk/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
-                              <p class="col-lg-10 text-end">Обществу глухонемых в г. Балканабат для улучшения условий содержания детей инвалидов.</p>
+                              <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <p class="col-10 text-end">Обществу глухонемых в г. Балканабат для улучшения условий содержания детей инвалидов.</p>
                             </div>
                             <div class="row mb-3 mt-5">
-                              <div class="col-lg-2"><a target="_blank" href="images/minnetdarlyk/Etrek muzeyi.jpg"><img style="width:100%" src="images/minnetdarlyk/Etrek muzeyi.jpg" alt="Minnetdarlyk haty"></a></div>
-                              <p class="col-lg-10 text-end">Предпринимателю Х. Годанову по созданию историко-краеведческого музея в г. Этрек Этрекского этрапа Балканского велаята.</p>
+                              <div class="col-2"><a target="_blank" href="images/minnetdarlyk/Etrek muzeyi.jpg"><img style="width:100%" src="images/minnetdarlyk/Etrek muzeyi.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <p class="col-10 text-end">Предпринимателю Х. Годанову по созданию историко-краеведческого музея в г. Этрек Этрекского этрапа Балканского велаята.</p>
                             </div>
                           <p>Хозяйственное общество «Зехинли доганлар» планирует продолжить благотворительную деятельность, так как лучший способ сохранить память о добрых делах-повторять их.</p>
                           
