--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <h2 class="lang" key="kartocka_fron_h2_2">Охрана вахтовым методом</h2>
               </div>
               <div class="flip-box-back">
-                <p class="lang" key="kartocka2">При применении вахтового метода работы для охранников (12 часовой рабочий день), за сутки на посту будут дежурить 2 охранника, один будет дежурить в дневную смену, а другой в ночную смену. После 15 дневной вахтовой смены на дежурство заступают два новых охранника. Таким образом достигается круглосуточное, постоянное присутствие одного охранника на посту охраны. В общем на таком посту охраны задействовано 4 человека в течении месяца. </p>
+                <p class="lang" key="kartocka2">При применении вахтового метода работы для охранников (12 часовой рабочий день), за сутки на посту будут дежурить 2 охранника, один будет дежурить в дневную смену, а другой в ночную смену. После 15 дневной вахтовой смены на дежурство заступают два новых охранника. Таким образом достигается круглосуточное, постоянное присутствие одного охранника на посту охраны. В общем на таком посту охраны задействовано 4 человека в течении месяца.</p>
               </div>
             </div>
           </div>
@@ -213,7 +213,7 @@
             <div class="flip-box-inner">
               <div class="flip-box-front">
                 <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka_fron_h2_4">Сопровождение грузов, машина сопровождения</h2>
+                <h2 class="lang" key="kartocka_fron_h2_4">Сопровождение грузов и машина сопровождения</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka4">Данный вид охранной деятельности предполагает обеспечение транспортом, охраной и сопровождение Заказчика в течение 24 часов в сутки. По требованию Заказчика наша компания имеет возможность предоставлять водителей и охранников со знанием иностранных языков.</p>
