--- a/index.html
+++ b/index.html
@@ -253,14 +253,30 @@
   </div>
 
 
+
+  <!-- TODO: ortadaky call to action -->
     <!-- ======= Call To Action Section ======= -->
-    <section id="call-to-action" class="sonky">
-      <div class="container" data-aos="zoom-out">
+    <section id="call-to-action" class="bashky bashky2">   
+      <div class="container" data-aos="zoom-out" style="max-height: min-content;">
         
-          <div class="text-center">
-            <h2 class="cta-title lang" key="section2h3">Сосредоточьтесь на важном для вас, <br> а мы позаботимся о вашей безопасности!</h2>
-          </div>
+        <div class="text-center">
+          <h2 class="cta-title lang" key="section2h3">Сосредоточьтесь на важном для вас, <br> а мы позаботимся о вашей безопасности!</h2>
         </div>
+      </div>
+      <svg class="hero-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28 " preserveAspectRatio="none">
+        <defs>
+          <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z">
+        </defs>
+        <g class="wave1">
+          <use xlink:href="#wave-path" x="50" y="3" fill="rgba(255,255,255, .1)">
+        </g>
+        <g class="wave2">
+          <use xlink:href="#wave-path" x="50" y="0" fill="rgba(255,255,255, .2)">
+        </g>
+        <g class="wave3">
+          <use xlink:href="#wave-path" x="50" y="9" fill="var(--color-logo)">
+        </g>
+      </svg>
       </section><!-- End Call To Action Section -->
 
 
@@ -389,7 +405,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
               <h3 class="lang" key="adres1">юридический Адрес</h3>
-              <address class="lang" key="adres2">Gumdag şäheriniň 15-nji ýaşaýyş jaýlar toplumynyň 88-njy jaýy</address>
+              <address class="lang duzetmeli" key="adres2">Türkmenistan, Balkan welaýaty,<br> Gumdag şäheriniň 15-nji ýaşaýyş jaýlar toplumynyň 88-njy jaýy</address>
             </div>
           </div>
 
@@ -397,7 +413,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
               <h3 class="lang" key="adres1">фактический адрес</h3>
-              <address class="lang" key="adres2">Türkmenbaşy şäheri, Şagadam söwda merkezi</address>
+              <address class="lang duzetmeli" key="adres2">Türkmenistan, Balkan welaýaty, Türkmenbaşy şäheriniň Balkan köçesiniň 10-njy jaýy “Şagadam” söwda merkeziniň 31-nji otagy</address>
             </div>
           </div>
 
